_curso/23_service_mesh_istio/circuit-breaker/k8s/deployment-app-with-success.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-app-success
spec:
  selector:
    matchLabels:
      app: sample-app
  template:
    metadata:
      labels:
        app: sample-app
        version: "200"
    spec:
      containers:
      - name: sample-app
        image: ovalves/circuit-breaker-example-go:latest
        ports:
        - containerPort: 8000
