_curso/23_service_mesh_istio/circuit-breaker/k8s/app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  type: ClusterIP
  selector:
    app: sample-app
  ports:
  - port: 80
    targetPort: 8000
