_curso/23_service_mesh_istio/circuit-breaker/k8s/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: circuit-breaker-sample-app
spec:
  host: app-service.default.svc.cluster.local
  trafficPolicy:
    outlierDetection:
      # consecutive5xxErrors: 20 # Qualquer erro da familia 500
      consecutiveGatewayErrors: 10 # Erro 504
      interval: 20s
      baseEjectionTime: 30s
      maxEjectionPercent: 100
